refactor: cleanup REST API + update Swagger (#35)
* refactor: cleanup REST API + update Swagger

* bugfix: run Formatter
